<resources>
    <string name="app_name">NiceShop</string>
    <string name="Login">Login</string>
    <string name="passwordLogin">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="topimagenothingparticular">topImageNothingParticular</string>
    <string name="emailLogin">Email</string>
    <string name="create_an_account">Create An Account</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="i_agree_to_the_terms_and_conditions">I agree to the <u>Terms and Conditions</u></string>
    <string name="sign_up">Sign Up</string>
    <string name="have_an_account_login">Have an Account? Login</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="title_activity_dash_board">DashBoardActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>