<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignUpActivity"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/topToolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        android:backgroundTint="@color/white">

        <TextView
            android:id="@+id/topTextSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/josefinsansbold"
            android:gravity="center"
            android:layout_marginEnd="16dp"
            android:text="@string/create_an_account"
            android:textSize="35sp"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.appcompat.widget.Toolbar>



    <EditText
        android:id="@+id/firstNameSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/topToolBar"
        android:fontFamily="@font/josefinsansbold"
        android:layout_marginTop="35dp"
        android:hint="@string/first_name"
        android:textSize="25sp"
        android:paddingStart="25dp"
        android:inputType="textPersonName"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        />
    <EditText
        android:id="@+id/lastNameSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/firstNameSignUp"
        android:fontFamily="@font/josefinsansbold"
        android:layout_marginTop="15dp"
        android:hint="@string/last_name"
        android:textSize="25sp"
        android:paddingStart="25dp"
        android:inputType="textPersonName"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        />
    <EditText
        android:id="@+id/emailSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/lastNameSignUp"
        android:fontFamily="@font/josefinsansbold"
        android:layout_marginTop="15dp"
        android:hint="@string/email"
        android:textSize="25sp"
        android:paddingStart="25dp"
        android:inputType="textEmailAddress"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        />
    <EditText
        android:id="@+id/pwSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/emailSignUp"
        android:fontFamily="@font/josefinsansbold"
        android:layout_marginTop="15dp"
        android:hint="@string/password"
        android:textSize="25sp"
        android:paddingStart="25dp"
        android:inputType="textPassword"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        />
    <EditText
        android:id="@+id/pwSignUp2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/pwSignUp"
        android:fontFamily="@font/josefinsansbold"
        android:layout_marginTop="15dp"
        android:hint="@string/confirm_password"
        android:textSize="25sp"
        android:paddingStart="25dp"
        android:inputType="textPassword"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        />
    <CheckBox
        android:id="@+id/tandcSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/pwSignUp2"
        android:text="@string/i_agree_to_the_terms_and_conditions"
        android:fontFamily="@font/josefinsansbold"
        android:textSize="18sp"
        android:textColor="@color/black"
        />
    <Button
        android:id="@+id/buttonSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tandcSignUp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20sp"
        android:text="@string/sign_up"
        android:textSize="25sp"
        android:fontFamily="@font/josefinsansbold"
        />
    <TextView
        android:id="@+id/havAccountLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/buttonSignUp"
        android:text="@string/have_an_account_login"
        android:fontFamily="@font/josefinsansbold"
        android:textSize="18sp"
        android:gravity="center"
        />
</androidx.constraintlayout.widget.ConstraintLayout>