<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">
<FrameLayout
    android:id="@+id/header_image"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    app:layout_constraintTop_toTopOf="parent">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="center"
        android:src="@drawable/app_background"
        android:contentDescription="@string/topimagenothingparticular" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/app_name"
        android:gravity="center"
        android:textSize="40sp"
        android:fontFamily="@font/josefinsansbold"
        android:textColor="@color/white"
        />
</FrameLayout>

<TextView
    android:id="@+id/topTextLogin"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@+id/header_image"
    android:text="@string/Login"
    android:fontFamily="@font/josefinsansbold"
    android:textSize="35sp"
    android:gravity="center"
    android:layout_marginTop="20dp"/>
    <EditText
        android:id="@+id/nameLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/topTextLogin"
        android:layout_marginTop="15dp"
        android:hint="@string/emailLogin"
        android:fontFamily="@font/josefinsansbold"
        android:textSize="22sp"
        android:paddingStart="25dp"
        android:inputType="textPersonName"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        />
    <EditText
        android:id="@+id/pwLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/nameLogin"
        android:fontFamily="@font/josefinsansbold"
        android:layout_marginTop="15dp"
        android:hint="@string/passwordLogin"
        android:textSize="22sp"
        android:paddingStart="25dp"
        android:inputType="textPassword"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/pwLogin"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/forgot_password"
        android:fontFamily="@font/josefinsansbold"
        android:textSize="15sp"
        android:layout_marginEnd="16dp"
        />
    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/pwLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20sp"
        android:text="@string/Login"
        android:textSize="22sp"
        android:fontFamily="@font/josefinsansbold"
        />
    <TextView
        android:id="@+id/noAccountSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        app:layout_constraintTop_toBottomOf="@id/buttonLogin"
        android:text="Don't have an Account? Sign up"
        android:fontFamily="@font/josefinsansbold"
        android:textSize="18sp"
        android:gravity="center"
        />
    <TextView
        android:id="@+id/loginvia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/noAccountSignUp"
        android:gravity="center"
        android:text="Login via"
        android:fontFamily="@font/josefinsansbold"
        android:textSize="18sp"
        />
    <ImageView
        android:layout_width="65dp"
        android:layout_height="65dp"
        app:layout_constraintTop_toBottomOf="@+id/loginvia"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@color/purple_500"
        android:layout_marginTop="15dp"
        android:layout_marginStart="125dp"
        />
    <ImageView
        android:layout_width="65dp"
        android:layout_height="65dp"
        app:layout_constraintTop_toBottomOf="@+id/loginvia"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@color/purple_500"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="125dp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>