<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ForgotPasswordActivity">
<androidx.appcompat.widget.Toolbar
    android:id="@+id/topToolBar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toTopOf="parent"
    />
    <FrameLayout
        android:id="@+id/header_image"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="center"
            android:src="@drawable/app_background"
            android:contentDescription="@string/topimagenothingparticular" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/app_name"
            android:gravity="center"
            android:textSize="40sp"
            android:fontFamily="@font/josefinsansbold"
            android:textColor="@color/white"
            />
    </FrameLayout>
    <TextView
        android:id="@+id/forgotPwLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/header_image"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="30dp"
        android:text="Forgot Password"
        android:textSize="25sp"
        android:fontFamily="@font/josefinsansbold"
        />
    <TextView
        android:id="@+id/contextForgot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/forgotPwLabel"
        android:layout_marginTop="20dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:text="Enter your password. We'll send a confimation code to your Email"
        android:textSize="20sp"
        android:fontFamily="@font/josefinsansbold"
        android:gravity="center"
        />
    <EditText
        android:id="@+id/emailForgot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/contextForgot"

        android:hint="@string/emailLogin"
        android:fontFamily="@font/josefinsansbold"
        android:textSize="22sp"
        android:paddingStart="25dp"
        android:inputType="textPersonName"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        />
    <Button
        android:id="@+id/buttonForgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/emailForgot"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="25dp"
        android:text="Submit"
        android:textSize="22sp"
        android:fontFamily="@font/josefinsansbold"
        />
</androidx.constraintlayout.widget.ConstraintLayout>